add new_ticket_sidebar location

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   },
   "defaultLocale": "en",
   "private": true,
-  "location": "ticket_sidebar",
+  "location": ["ticket_sidebar", "new_ticket_sidebar"],
   "frameworkVersion": "0.5"
 }
