Rename to Ticket Field Manager

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Required Field",
+  "name": "Ticket Field Manager",
   "author": {
     "name": "Pierre Nespo",
     "email": "pierre.nespo@gmail.com"
