Add whitelist for required/hidden/readonly fields via tags/orgs/groups

--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,48 @@
       "type": "multiline"
     },
     {
+      "name": "required_fields_whitelist_tags",
+      "type": "text"
+    },
+    {
+      "name": "required_fields_whitelist_group_ids",
+      "type": "text"
+    },
+    {
+      "name": "required_fields_whitelist_organization_ids",
+      "type": "text"
+    },
+    {
       "name": "hidden_fields",
       "type": "multiline"
     },
     {
+      "name": "hidden_fields_whitelist_tags",
+      "type": "text"
+    },
+    {
+      "name": "hidden_fields_whitelist_group_ids",
+      "type": "text"
+    },
+    {
+      "name": "hidden_fields_whitelist_organization_ids",
+      "type": "text"
+    },
+    {
       "name": "readonly_fields",
       "type": "multiline"
+    },
+    {
+      "name": "readonly_fields_whitelist_tags",
+      "type": "text"
+    },
+    {
+      "name": "readonly_fields_whitelist_group_ids",
+      "type": "text"
+    },
+    {
+      "name": "readonly_fields_whitelist_organization_ids",
+      "type": "text"
     }
   ],
   "defaultLocale": "en",
