Update author in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Ticket Field Manager",
   "author": {
-    "name": "Pierre Nespo",
-    "email": "pierre.nespo@gmail.com"
+    "name": "Zendesk Services",
+    "email": "services@zendesk.com"
   },
   "parameters":[
     {
