--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,7 @@
   ],
   "defaultLocale": "en",
   "private": true,
-  "location": ["ticket_sidebar", "new_ticket_sidebar"],
-  "frameworkVersion": "0.5"
+  "version": "1.1",
+  "location": [ "ticket_sidebar", "new_ticket_sidebar" ],
+  "frameworkVersion": "1.0"
 }
