--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
   ],
   "defaultLocale": "en",
   "private": true,
-  "version": "1.1",
+  "noTemplate": true,
+  "version": "1.2",
   "location": [ "ticket_sidebar", "new_ticket_sidebar" ],
   "frameworkVersion": "1.0"
 }
